build(servo): first attempt(not work yet)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,12 @@ codegen-units = 1
 lto = true
 incremental = false
 opt-level = "s"
+
+# This is required because we want all dependencies that use WebRender to
+# use our vendored version.
+[patch."https://github.com/servo/webrender"]
+webrender = { path = "../servo/third_party/webrender/webrender" }
+webrender_api = { path = "../servo/third_party/webrender/webrender_api" }
+
+[patch.crates-io]
+bindgen = { git = "https://github.com/sagudev/rust-bindgen", branch = "f16" }
