--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -52,7 +52,7 @@ thiserror = "1.0"
 tauri-runtime = { version = "1.0.0-alpha.5", path = "../tauri-runtime" }
 tauri-macros = { version = "2.0.0-alpha.11", path = "../tauri-macros" }
 tauri-utils = { version = "2.0.0-alpha.11", features = [ "resources" ], path = "../tauri-utils" }
-tauri-runtime-wry = { version = "1.0.0-alpha.6", path = "../tauri-runtime-wry", optional = true }
+tauri-runtime-wry = { version = "1.0.0-alpha.6", path = "../tauri-runtime-wry", optional = true, features = [ "servo" ]}
 getrandom = "0.2"
 serde_repr = "0.1"
 state = "0.6"
