--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tauri-runtime-wry"
 version = "1.0.0-alpha.6"
 description = "Wry bindings to the Tauri runtime"
-exclude = [ "CHANGELOG.md", "/target" ]
+exclude = ["CHANGELOG.md", "/target"]
 readme = "README.md"
 authors = { workspace = true }
 homepage = { workspace = true }
@@ -13,23 +13,31 @@ edition = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-wry = { version = "0.35", default-features = false, features = [ "file-drop", "protocol", "os-webview" ] }
-tao = { version = "0.24", default-features = false, features = ["rwh_05"] }
+# wry = { version = "0.35", default-features = false, features = [ "file-drop", "protocol", "os-webview" ] }
+wry = { path = "../../../wry", default-features = false, features = [
+  "file-drop",
+  "protocol",
+  "servo",
+] }
+tao = { git = "https://github.com/tauri-apps/tao", default-features = false, features = ["rwh_05"] }
 tauri-runtime = { version = "1.0.0-alpha.5", path = "../tauri-runtime" }
 tauri-utils = { version = "2.0.0-alpha.11", path = "../tauri-utils" }
 raw-window-handle = "0.5"
 http = "0.2"
 
+[build-dependencies]
+cfg_aliases = "0.1"
+
 [target."cfg(windows)".dependencies]
 webview2-com = "0.28"
 
-  [target."cfg(windows)".dependencies.windows]
-  version = "0.52"
-  features = [ "Win32_Foundation" ]
+[target."cfg(windows)".dependencies.windows]
+version = "0.52"
+features = ["Win32_Foundation"]
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
-gtk = { version = "0.18", features = [ "v3_24" ] }
-webkit2gtk = { version = "=2.0", features = [ "v2_38" ] }
+gtk = { version = "0.18", features = ["v3_24"] }
+webkit2gtk = { version = "=2.0", features = ["v2_38"] }
 percent-encoding = "2.1"
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
@@ -39,11 +47,13 @@ cocoa = "0.25"
 jni = "0.21"
 
 [features]
-devtools = [ "wry/devtools", "tauri-runtime/devtools" ]
+default = ["servo"]
+servo = ["wry/servo"]
+devtools = ["wry/devtools", "tauri-runtime/devtools"]
 macos-private-api = [
   "wry/fullscreen",
   "wry/transparent",
-  "tauri-runtime/macos-private-api"
+  "tauri-runtime/macos-private-api",
 ]
-objc-exception = [ "wry/objc-exception" ]
-linux-protocol-body = [ "wry/linux-body", "webkit2gtk/v2_40" ]
+objc-exception = ["wry/objc-exception"]
+linux-protocol-body = ["wry/linux-body", "webkit2gtk/v2_40"]
