--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tauri-runtime-wry"
 version = "2.0.0-beta.8"
 description = "Wry bindings to the Tauri runtime"
-exclude = [ "CHANGELOG.md", "/target" ]
+exclude = ["CHANGELOG.md", "/target"]
 readme = "README.md"
 authors = { workspace = true }
 homepage = { workspace = true }
@@ -13,9 +13,12 @@ edition = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-# wry = { version = "0.37", default-features = false, features = [ "file-drop", "protocol", "os-webview" ] }
-wry = { path = "../../../wry", default-features = false, features = [ "file-drop", "protocol", "os-webview" ] }
-tao = { version = "0.26", default-features = false, features = [ "rwh_06" ] }
+wry = { git = "https://github.com/tauri-apps/wry.git", branch = "fix/duplicate-media-permission-prompt", default-features = false, features = [
+  "file-drop",
+  "protocol",
+  "os-webview",
+] }
+tao = { version = "0.26", default-features = false, features = ["rwh_06"] }
 tauri-runtime = { version = "2.0.0-beta.8", path = "../tauri-runtime" }
 tauri-utils = { version = "2.0.0-beta.8", path = "../tauri-utils" }
 raw-window-handle = "0.6"
@@ -28,13 +31,13 @@ log = "0.4"
 webview2-com = "0.28"
 softbuffer = "0.4"
 
-  [target."cfg(windows)".dependencies.windows]
-  version = "0.52"
-  features = [ "Win32_Foundation" ]
+[target."cfg(windows)".dependencies.windows]
+version = "0.52"
+features = ["Win32_Foundation"]
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
-gtk = { version = "0.18", features = [ "v3_24" ] }
-webkit2gtk = { version = "=2.0", features = [ "v2_38" ] }
+gtk = { version = "0.18", features = ["v3_24"] }
+webkit2gtk = { version = "=2.0", features = ["v2_38"] }
 percent-encoding = "2.1"
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
@@ -44,14 +47,14 @@ cocoa = "0.25"
 jni = "0.21"
 
 [features]
-devtools = [ "wry/devtools", "tauri-runtime/devtools" ]
+devtools = ["wry/devtools", "tauri-runtime/devtools"]
 macos-private-api = [
   "wry/fullscreen",
   "wry/transparent",
-  "tauri-runtime/macos-private-api"
+  "tauri-runtime/macos-private-api",
 ]
-objc-exception = [ "wry/objc-exception" ]
-linux-protocol-body = [ "wry/linux-body", "webkit2gtk/v2_40" ]
-tracing = [ "dep:tracing", "wry/tracing" ]
-macos-proxy = [ "wry/mac-proxy" ]
-unstable = [ ]
+objc-exception = ["wry/objc-exception"]
+linux-protocol-body = ["wry/linux-body", "webkit2gtk/v2_40"]
+tracing = ["dep:tracing", "wry/tracing"]
+macos-proxy = ["wry/mac-proxy"]
+unstable = []
